# Neo_Mobile-OV

./: .gitignore  README.md  pyproject.toml
Docs/: DEVELOPMENT_NOTE.md  NEODRAGON_EXP2_EXP3_EXP4_FAILURE_POSTMORTEM.md  NEODRAGON_EXPERIMENTS_AND_EXP5.md  NEODRAGON_FOUR_EXPERIMENTS.md
configs/: mobile_o_sana_0_5b.yaml  mobile_ov_current.yaml  mobile_ov_neodragon.yaml  mobile_ov_neodragon_bridge_v2.yaml
docs/: ARCHITECTURE.md  mobile_o_requirements_reference.txt
environment/: neo_mobileov.yaml
new_mobile_ov/: __init__.py  checkpoints.py  config.py  model.py
scripts/: ablate_neodragon_exp2.sbatch  ablate_neodragon_exp3_exp4.sbatch  benchmark_neodragon_inference.sbatch  copy_openvid_captions_to_repo.sh  download_openvid_raw_to_repo.sh  download_openvid_raw_to_repo_berzelius.sbatch  encode_neodragon_vae_latents.sbatch  encode_neodragon_vae_latents_1node8gpu.sbatch  exp1_continue_64k_2epochs_1node8gpu.sbatch  exp1_train_neodragon_bridge_functional_distill_1node8gpu.sbatch  exp2_corrected_train_neodragon_joint_distill_1node8gpu.sbatch  exp2_train_neodragon_joint_flow_distill_1node8gpu.sbatch  exp3_train_neodragon_joint_from_scratch_1node8gpu.sbatch  exp4_train_neodragon_flow_only_from_scratch_1node8gpu.sbatch  exp5_train_neodragon_staged_1node8gpu.sbatch  import_openvid_data_to_repo.sh  infer_mobile_ov_neodragon_smoke.sbatch  infer_two_options_lmw_smoke.sbatch  lmw_feasibility_100.sbatch  lmw_overfit_100.sbatch  prepare_neodragon_openvid100.sh  prepare_openvid_neodragon_2s.sh  setup_env.sh  smoke_exp5_2gpu.sbatch  test_neodragon_checkpoint.sbatch  (+13 more)
tools/: download.py  (+16 more)
(+37 files in other folders)
