[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-mobile-ov"
version = "0.1.0"
description = "New Mobile-OV research branch with current Mobile-OV and Mobile-O/SANA-0.5B generation options."
requires-python = ">=3.10"
dependencies = [
  "accelerate",
  "diffusers>=0.34.0",
  "einops",
  "hf-xet",
  "opencv-python",
  "pandas",
  "pillow",
  "pyyaml",
  "safetensors",
  "sentencepiece",
  "timm",
  "torch",
  "torchvision",
  "tqdm",
  "transformers>=4.46.0",
]

[tool.setuptools.packages.find]
include = ["new_mobile_ov*"]
